# hydrabridge-esp32

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: firmware.yml
components/ai_pump_protocol/: CMakeLists.txt
components/ai_pump_protocol/include/: ai_pump_protocol.h
components/ai_pump_protocol/src/: ai_pump_protocol.c
components/ble_light_client/: CMakeLists.txt
components/ble_light_client/include/: ble_light_client.h
components/ble_light_client/src/: ble_light_client.c
components/channel_model/: CMakeLists.txt
components/channel_model/include/: channel_model.h
components/channel_model/src/: channel_model.c
components/command_engine/: CMakeLists.txt
components/command_engine/include/: command_engine.h
components/command_engine/src/: command_engine.c
components/command_queue/: CMakeLists.txt
components/command_queue/include/: command_queue.h
components/command_queue/src/: command_queue.c
components/config_store/: CMakeLists.txt
components/config_store/include/: config_store.h
components/config_store/src/: config_store.c  config_store_defaults.c
components/event_log/: CMakeLists.txt
components/event_log/include/: event_log.h
components/event_log/src/: event_log.c
components/fsci_codec/: CMakeLists.txt
components/fsci_codec/include/: fsci_codec.h
components/fsci_codec/src/: fsci_codec.c
components/hydra64hd_protocol/: CMakeLists.txt
components/hydra64hd_protocol/include/: hydra64hd_protocol.h
components/hydra64hd_protocol/src/: hydra64hd_protocol.c
components/light_registry/: CMakeLists.txt
components/light_registry/include/: light_registry.h
components/light_registry/src/: light_registry.c
components/modbus_interface/: CMakeLists.txt
components/modbus_interface/include/: modbus_interface.h  modbus_registers.h
components/modbus_interface/src/: modbus_interface.c  modbus_slave_driver.c
components/mqtt_bridge/: CMakeLists.txt
components/mqtt_bridge/include/: mqtt_bridge.h
components/mqtt_bridge/src/: mqtt_bridge.c
components/ota_update/: CMakeLists.txt
components/ota_update/include/: ota_update.h
components/ota_update/src/: ota_update.c
components/preset_engine/: CMakeLists.txt
components/preset_engine/include/: preset_engine.h
components/preset_engine/src/: preset_engine.c
components/pump_registry/: CMakeLists.txt
components/pump_registry/include/: pump_registry.h
components/pump_registry/src/: pump_registry.c
components/pump_schedule_engine/: CMakeLists.txt
components/pump_schedule_engine/include/: pump_schedule_engine.h
components/pump_schedule_engine/src/: pump_schedule_engine.c
components/schedule_engine/: CMakeLists.txt
components/schedule_engine/include/: schedule_engine.h
components/schedule_engine/src/: schedule_engine.c
components/sun_service/: CMakeLists.txt
components/sun_service/include/: sun_service.h
components/sun_service/src/: sun_service.c
components/time_service/: CMakeLists.txt
components/time_service/include/: time_service.h
components/time_service/src/: time_service.c
components/web_ui/: CMakeLists.txt
components/web_ui/include/: web_ui.h
components/web_ui/src/: web_ui.c
components/wifi_station/: CMakeLists.txt
components/wifi_station/include/: wifi_station.h
components/wifi_station/src/: wifi_station.c
docs/: ai-pump-protocol-notes.md  ble-protocol-reference.md  time-sun-schedules.md
host_tests/: CMakeLists.txt  runner.c
host_tests/tests/: all_tests.h  test_ai_pump_protocol.c  test_channel_model.c  test_command_engine.c  test_command_queue.c  test_config_store.c  test_crc16.c  test_fsci_builder.c  test_hydra64hd_protocol.c  test_modbus_interface.c  test_mqtt_parser.c  test_preset_engine.c  test_pump_registry.c  test_pump_schedule_engine.c  test_schedule_engine.c  test_sun_service.c
main/: CMakeLists.txt  app_main.c  idf_component.yml  wifi_credentials.h.example
